chore: Incluindo o css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <div class="header">
             <span>Lista de tarefas</span>
+            <button><i class="bx bxs-check-square"></i></button>
             <button><i class="bx bxs-trash-alt"></i></button>
-            <button><i class='bx bxs-check-square'></i></button>
         </div>
 
         <hr>
@@ -24,7 +24,10 @@
             <input class="textInsert" type="text">
             <button><i class="bx bx-plus"></i></button>
         </div>
-        <ul>
+
+        <ul class="task_container"></ul>
+
+        <!-- <ul>
             <li> 
                 <button>
                     <i class='bx bx-toggle-left'></i>
@@ -39,10 +42,10 @@
                     <i class='bx bx-x'></i>
                 </button> 
             </li>
-        </ul>
+        </ul> -->
 
     </div>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
