feat: add funcoes (add task)

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
         <div class="header">
             <span>Lista de tarefas</span>
-            <button class="checkAllSelected"><i class="bx bxs-check-square"></i></button>
-            <button class="removeAllSelected"><i class="bx bxs-trash-alt"></i></button>
+            <button type="button" class="checkAllSelected"><i class="bx bxs-check-square"></i></button>
+            <button type="button" class="removeAllSelected"><i class="bx bxs-trash-alt"></i></button>
         </div>
 
         <hr>
 
-        <div class="new-task-container">
+        <form class="new-task-container">
             <input class="textInsert" type="text" placeholder="Tarefa para ser feita...">
-            <button class="newTaskButton"><i class="bx bx-plus"></i></button>
-        </div>
+            <button type="submit"><i class="bx bx-plus"></i></button>
+        </form>
 
         <ul class="list"></ul>
 
